# adk_tutorials

./: .gitignore  README.md  main.py  pyproject.toml
a2a_tutorial/a2a_basic/: agent.py
a2a_tutorial/a2a_basic/remote_a2a/check_prime_agent/: agent.py
a2a_tutorial/a2a_root/remote_a2a/hello_world/: agent.py
agent_ollama/: agent.py
agent_team/: guardrail_callback.py  reception_agents.py  weather_agent.py  weather_agent_team.py  weather_agent_team_context.py
qdrant_rag/: agent.py  qdrant_push_data_script.py
